# weval

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/actions/github-release/: package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
include/: weval.h
lib/: weval-stubs.wat
npm/weval/: README.md  index.js  package-lock.json  package.json  update.js
npm/weval/tests/: download.mjs  index.mjs
src/: cache.rs  component.rs  constant_offsets.rs  dce.rs  directive.rs  escape.rs  eval.rs  filter.rs  image.rs  intrinsics.rs  liveness.rs  main.rs  module.rs  state.rs  stats.rs  value.rs
tests/simple/: Makefile  component.wit  simple.cpp
