[package]
name = "weval"
description = "The WebAssembly partial evaluator"
repository = "https://github.com/bytecodealliance/weval"
version = "0.3.4"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"
exclude = ["/npm", "/ci"]

[dependencies]
waffle = "0.1.1"
anyhow = "1.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.11"
fxhash = "0.2"
rayon = "1.8"
indicatif = "0.17"
wasmtime = { version = "41.0.3", features = ["cranelift"] }
wasmtime-wizer = { version = "41.0.3", features = ["wasmtime"] }
wasmtime-wasi = "41.0.3"
tokio = { version = "1", features = ["rt"] }
bincode = "1.3.3"
sha2 = "0.10.8"
sqlite = "0.36.0"
serde = { version = "1.0.197", features = ["derive"] }
