[package]
name = "weval"
description = "The WebAssembly partial evaluator"
repository = "https://github.com/bytecodealliance/weval"
version = "0.4.0"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"
exclude = ["/npm", "/ci"]

[dependencies]
waffle = "0.2.0"
anyhow = "1.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.11"
fxhash = "0.2"
rayon = "1.8"
indicatif = "0.17"
wasmtime = { version = "41.0.3", features = ["cranelift"] }
wasmtime-wizer = { version = "41.0.3", features = ["wasmtime"] }
wasmtime-wasi = "41.0.3"
tokio = { version = "1", features = ["rt"] }
bincode = "1.3.3"
sha2 = "0.10.8"
sqlite = "0.36.0"
serde = { version = "1.0.197", features = ["derive"] }

[lints.clippy]
# The default set of lints in Clippy is viewed as "too noisy" right now so
# they're all turned off by default. Selective lints are then enabled below as
# necessary.
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
useless_conversion = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'
from_over_into = 'warn'
redundant_field_names = 'warn'
multiple_bound_locations = 'warn'
extra_unused_type_parameters = 'warn'
